[package]
name = "spea2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
quickersort = "3.0.1"
criterion = "0.3"

[[bench]]
name = "bench_evolve"
harness = false

[lib]
name="spea2"
path = "src/lib.rs"

