[package]
name = "spea2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "knapsack"

[dependencies]
rand = "0.8.5"
quickersort = "3.0.1"
criterion = "0.3"
lazy_static = "1.4.0"
itermore = "0.2.0"

[lib]
name="spea2"
path = "src/spea2.rs"
doctest = false

[[bench]]
name = "bench_evolve"
harness = false



